--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_toolbar-android')
     implementation project(':react-native-config')
     implementation project(':@react-native-community_datetimepicker')
     implementation project(':react-native-device-info')
