--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/async-storage": "1.11.0",
     "@react-native-community/datetimepicker": "^2.2.2",
     "@react-native-community/netinfo": "^3.2.1",
+    "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "buffer": "^6.0.3",
     "cross-os": "^1.3.0",
     "flux": "^3.1.3",
@@ -30,7 +31,6 @@
     "react": "^16.8.6",
     "react-i18next": "^7.12.0",
     "react-native": "^0.59.10",
-    "react-native-config": "^1.4.2",
     "react-native-confirmation-code-field": "^6.5.1",
     "react-native-device-info": "^5.4.0",
     "react-native-easy-grid": "^0.2.1",
@@ -47,6 +47,7 @@
     "react-native-stars": "^1.1.6",
     "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-webview": "^11.6.5",
     "react-navigation": "2.18.2",
     "rxjs": "^5.5.10",
     "snake-case": "^2.1.0"
