--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,7 +27,8 @@ target 'coJobcoreTalent' do
   pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
 
   pod 'RNI18n', :path => '../node_modules/react-native-i18n'
-  # pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
 
   pod 'TouchID', :path => '../node_modules/react-native-touch-id'
 
