--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,6 +108,7 @@ android {
             abiFilters 'armeabi-v7a','arm64-v8a','x86','x86_64'
         }
         multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
     }
     signingConfigs {
         release {
