--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,9 +3,9 @@
 buildscript {
     ext {
         buildToolsVersion = "28.0.3"
-        minSdkVersion = 21
-        compileSdkVersion = 30
-        targetSdkVersion = 30
+        minSdkVersion = 16
+        compileSdkVersion = 28
+        targetSdkVersion = 28
         supportLibVersion = "28.0.0"
         androidMapsUtilsVersion = "0.5+"
     }
@@ -37,6 +37,8 @@ allprojects {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
+        maven { url 'https://www.jitpack.io' }
+        maven { url 'https://maven.google.com' }
     }
 }
 
