--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "npx jetify && npx react-native run-android",
     "ios": "react-native run-ios",
     "test": "jest",
-    "postinstall": "cross-os fix-maps"
+    "postinstall": "cross-os fix-maps & npx jetify"
   },
   "cross-os": {
     "fix-maps": {
@@ -67,7 +67,7 @@
     "eslint-plugin-react-native": "^3.7.0",
     "husky": "^1.2.1",
     "jest": "24.8.0",
-    "jetifier": "^1.6.5",
+    "jetifier": "^1.6.8",
     "lint-staged": "^8.1.0",
     "metro-react-native-babel-preset": "0.54.1",
     "prettier": "^1.15.3",
